# playwright_containers

./: .gitignore  LICENSE.md  README.md  docker-compose.yml  pyproject.toml  script.py
docker/python/: Dockerfile
